# dfa-creator

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yaml  release.yml  rust.yaml
src/: dfa.rs  escape.rs  lib.rs  main.rs  nfa.rs  numberer.rs  wasm.rs
src/utils/: minimize.rs  mod.rs  nfa2dfa.rs  reg2nfa.rs  run.rs  show.rs
