[package]
default-run = "dfac"
description = "A tool to create and minimize NFAs and DFAs from regex."
edition = "2021"
keywords = ["dfa", "nfa", "regex", "rust", "typescript", "mermaid"]
license = "MIT"
name = "dfa-creator"
version = "0.2.2"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = {version = "1.0.81", optional = true}
clap = {version = "4.5.3", features = ["derive"], optional = true}
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
thiserror = "1.0.58"
wasm-bindgen = "0.2.73"

[features]
dfac = ["clap", "anyhow"]

[[bin]]
name = "dfac"
path = "src/main.rs"
required-features = ["dfac"]
